Center hero on landing page, logo on small devices fix.

--- a/app/sass/index/index.scss
+++ b/app/sass/index/index.scss
@@ -49,7 +49,9 @@ Copyright 2015 Fresco News, Inc. All Rights Reserved.
 		display:inline-block;
 		float:left;
 		position:static;
-        padding: 31px 0 31px 36px;
+		@media screen and (min-width: 720px) {
+	        padding: 31px 0 31px 36px;
+		}
 	}
 
 	ul {
@@ -172,7 +174,7 @@ $heroHeight: 180px;
 
 .landing-wrap{
 	height:100%;
-	margin-top: 20%;
+	margin-top: 40vh;
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
@@ -193,11 +195,6 @@ $heroHeight: 180px;
 	text-align:center;
 	position:relative;
 	color:#FFF;
-	top:45%;
-
-	@include mobile{
-		top:25%;
-	}
 
 	.tagline{
 		margin:0 auto 48px;
